[package]
name = "support_game"
version = "0.1.0"
edition = "2021"
default-run = "support_game"

[profile.dev.package.'*']
opt-level = 3

[dependencies]
tray-icon = "0.19.0"
image = "0.25"
anyhow = "1.0.89"
tokio = { version = "1.40.0", features = ["full"] }

rsn = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
known-folders = "1.2.0"
indexmap = { version = "2.6.0", features = ["serde"] }
tao = "0.30.3"
flume = "0.11.0"
bincode = "1.3.3"
macroquad = "0.4.0"
miniquad = "0.4.6"

[build-dependencies]
winresource = "0.1.17"
